# qandle

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test-publish.yml  python-test.yml
docs/: conf.py  index.rst  rebuild.bat  rebuild.sh
docs/source/: modules.rst  qandle.ansaetze.ansatz.rst  qandle.ansaetze.rst  qandle.ansaetze.specialunitary.rst  qandle.ansaetze.stronglyentangling.rst  qandle.ansaetze.stronglyentangling_budget.rst  qandle.ansaetze.twolocal.rst  qandle.config.rst  qandle.convolution.rst  qandle.drawer.rst  qandle.embeddings.rst  qandle.errors.rst  qandle.measurements.rst  qandle.operators.rst  qandle.qasm.rst  qandle.qcircuit.rst  qandle.rst  qandle.splitter.grouping.rst  qandle.splitter.main.rst  qandle.splitter.rst  qandle.utils.rst
docs/tutorial/: 00intro.rst  01helloquantum.ipynb  03barren.ipynb  index.rst
qandle/: convolution.py  errors.py  operators.py  qasm.py  qcircuit.py  requirements.txt  utils.py
qandle/ansaetze/: ansatz.py  specialunitary.py  stronglyentangling.py
qandle/splitter/: __init__.py  grouping.py
qandle/test/: test_convolution.py  test_measurements.py  test_operators.py
src/qandle/: __init__.py  config.py  convolution.py  drawer.py  embeddings.py  errors.py  measurements.py  operators.py  qcircuit.py  requirements.txt  utils.py
src/qandle/ansaetze/: __init__.py  ansatz.py  specialunitary.py  stronglyentangling.py  stronglyentangling_budget.py  twolocal.py
src/qandle/splitter/: grouping.py  main.py
src/qandle/test/: check_qasm.py  test_ansaetze.py  test_embeddings.py  test_operators.py  test_splitter.py
