[tool.poetry]
name = "qandle"
version = "0.1.5"
description = "QANDLE is a fast and simple quantum state-vector simulator for hybrid machine learning using the PyTorch library."
authors = ["Gerhard Stenzel <gerhard.stenzel@ifi.lmu.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python",
]

[tool.poetry.urls]
documentation = "https://gstenzel.github.io/qandle/"
repository = "https://github.com/gstenzel/qandle/"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
qW-Map = "^0.1.2"
networkx = "^3"
einops = "^0.8"
numpy = "^1.21"
openqasm3 = {extras = ["parser"], version = "^1.0.0"}

[tool.poetry.group.dev.dependencies]
PennyLane = "^0.33"
pytest = "^7.4"
pytest-cov = "^5.0.0"
snakeviz = "^2.2"
sphinx = "^7.4.7"
myst-nb = "^1.1.1"
sphinx-rtd-theme = "^2.0.0"
ruff = "^0.5.5"

[tool.pytest.ini_options]
testpaths = ["src/qandle/",]

[tool.poe.tasks]
test = "pytest --cov=qandle --cov-report=html -W error -W ignore::PendingDeprecationWarning:semantic_version.base -W ignore::DeprecationWarning -W ignore::pytest_cov.plugin.CovDisabledWarning"
_createautodoc = "sphinx-apidoc --separate -a -o ./docs/source ./src/qandle ./src/qandle/test"
_sphinxbuild = "sphinx-build -M html ./docs/ ./docs/build"
doc = ["_createautodoc", "_sphinxbuild"]
format = "ruff check --output-format=github"

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
